src/CMakeLists.txt with wrong variables and with target_link_libraries that wasn't being used anymore -> Managers & Scenes [FIXED}

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(MANAGER_DIRS ${PROJECT_SOURCE_DIR}/src/Managers})
-set(SCENES_DIRS ${PROJECT_SOURCE_DIR}/src/Scenes/})
+set(MANAGER_DIRS ${PROJECT_SOURCE_DIR}/src/Managers)
+set(SCENES_DIRS ${PROJECT_SOURCE_DIR}/src/Scenes)
 
 add_executable(${PROJECT_NAME}
     main.cpp
@@ -13,7 +13,6 @@ set(EXECUTABLE_NAME "Dante")
 
 add_subdirectory(Managers)
 add_subdirectory(Scenes)
-message(${CMAKE_BINARY_DIR})
 
 set_target_properties(${PROJECT_NAME}
     PROPERTIES
@@ -28,10 +27,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 	external_deps
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
-    managers
-    scenes
-)
+# target_link_libraries(${PROJECT_NAME} PRIVATE
+#     managers
+#     scenes
+# )
 
 target_include_directories(${PROJECT_NAME}
     PRIVATE ${PROJECT_SOURCE_DIR}/include
