Create an Animation Class separately and add a Factory Design Patter to handle animation creation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(${PROJECT_NAME}
     main.cpp
     Game.cpp
     ${MANAGER_DIRS}/SceneManager.cpp
+    ${MANAGER_DIRS}/AnimationManager.cpp
     ${SCENES_DIRS}/GameScene.cpp
     ${SCENES_DIRS}/MenuScene.cpp
     ${ECS_DIRS}/Systems/MovementSystem.cpp
