--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(${PROJECT_NAME}
     Game.cpp
     EntityFactory.cpp
     Tile.cpp
+    ${PROJECT_SOURCE_DIR}/include/Managers/Manager.hpp
     ${MANAGER_DIRS}/SceneManager.cpp
     ${MANAGER_DIRS}/TileManager.cpp
     ${MANAGER_DIRS}/AnimationManager.cpp
